# Eeee

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _testfile.txt  app.py  fly.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.js  tailwind.config.js
app/: config.py  main.py
app/news/: __init__.py  collector.py  sources.py
app/strategy/: indicators.py  scalper.py
app/trading/: engine.py  feed.py  storage.py
deploy/: .gitignore  README.md  exchanges.py  main.py  mock.py  paper.py  probability.py  pyproject.toml  scanner.py
deploy/static/: app.js  index.html  styles.css
public/: app.js  index.html  styles.css
server/: index.js  mock.js  scanner.js
server/exchanges/: binance.js  gate.js  index.js
src/: App.tsx  index.css
static/: app.js  index.html  news.html  news.js  styles.css
