[project]
name = "crypto-scalper"
version = "0.1.0"
description = "Live paper-trading scalper bot with real-time Binance data and web dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "aiosqlite>=0.19",
    "pydantic>=2.6",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.strategy", "app.trading", "app.api"]
